--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@use 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel' as owlCarousel;
+@use 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default' as owlTheme;
+
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
