--- a/src/app/components/manage/brands/brands.component.html
+++ b/src/app/components/manage/brands/brands.component.html
@@ -1,7 +1,7 @@
 <div class="px-40 mt-10">
     <div class="flex justify-between pb-4">
-        <h1 class="text-2xl font-bold">Manage Category</h1>
-        <button mat-raised-button color="primary" class="mr-4" [routerLink]="'/admin/categories/add'">Add New Category</button>
+        <h1 class="text-2xl font-bold">Manage Brands</h1>
+        <button mat-raised-button color="primary" class="mr-4" [routerLink]="'/admin/brands/add'">Add New Brand</button>
     </div>
     <div class="shadow">
         <mat-form-field>
@@ -26,7 +26,7 @@
             <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let row">
-                <button mat-raised-button color="accent" class="mr-4" [routerLink]="'/admin/categories/'+row._id">Edit</button>
+                <button mat-raised-button color="accent" class="mr-4" [routerLink]="'/admin/brands/'+row._id">Edit</button>
                 <button mat-raised-button color="warn" (click)="delete(row._id)">Delete</button>
             </td>
             </ng-container>
