--- a/src/app/components/manage/products/products.component.html
+++ b/src/app/components/manage/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="px-40 mt-10">
     <div class="flex justify-between pb-4">
-        <h1 class="text-2xl font-bold">Manage Category</h1>
-        <button mat-raised-button color="primary" class="mr-4" [routerLink]="'/admin/categories/add'">Add New Category</button>
+        <h1 class="text-2xl font-bold">Manage Products</h1>
+        <button mat-raised-button color="primary" class="mr-4" [routerLink]="'/admin/products/add'">Add New Product</button>
     </div>
     <div class="shadow">
         <mat-form-field>
@@ -21,12 +21,27 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let row"> {{row.name}} </td>
             </ng-container>
+            
+            <ng-container matColumnDef="shortDescription">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Short Description </th>
+                <td mat-cell *matCellDef="let row"> {{row.shortDescription}} </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+                <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="discount">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Discount </th>
+                <td mat-cell *matCellDef="let row"> {{row.discount}} </td>
+            </ng-container>
     
             <!-- Fruit Column -->
             <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let row">
-                <button mat-raised-button color="accent" class="mr-4" [routerLink]="'/admin/categories/'+row._id">Edit</button>
+                <button mat-raised-button color="accent" class="mr-4" [routerLink]="'/admin/products/'+row._id">Edit</button>
                 <button mat-raised-button color="warn" (click)="delete(row._id)">Delete</button>
             </td>
             </ng-container>
@@ -40,7 +55,7 @@
             </tr>
         </table>
     
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select"></mat-paginator>
     </div>
 </div>
   
